removed Contact indicators on index page
this page started as an almost empty contact.html page and I used it as a clean space for testing my jQuery animation.  However, I left "contact" on (in the page title and in the nav) so in this commit I have removed these on states

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Taylor UX/UI Designer: Contact</title>
+    <title>Kim Taylor UX/UI Designer</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
             <div><a href="index.html"><img src="images/Logo Kim Taylor.png" alt="Kim Taylor UX/UI Designer" width="270" height="131"></a></div>
             <div><!-- header space --></div>
             <div><!-- PRIMARY NAVIGATION -->
-                <a href="work.html" class="primaryNav">WORK</a><a href="resume.html" class="primaryNav">RESUME</a><a href="" class="primaryNavOn">CONTACT</a></div>
+                <a href="work.html" class="primaryNav">WORK</a><a href="resume.html" class="primaryNav">RESUME</a><a href="contact.html" class="primaryNav">CONTACT</a></div>
         </div>
     </header>
     <section>
